<resources>
    <string name="app_name">StaffCafePOSApp</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="menu_title">Menu</string>
    <string name="orders_title">Orders</string>
    <string name="tables_title">Tables</string>
    <string name="order_id">Order ID:</string>
    <string name="table_no">Table No:</string>
    <string name="status">Status:</string>
    <string name="make_payment">Make payment</string>
    <string name="title">StaffCafePOS Login</string>
    <string name="enter_your_username">Enter Your Email</string>
    <string name="password">Password :</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">LOGIN</string>
    <string name="email">Email :</string>
    <string name="food">Food</string>
    <string name="beverages">Beverages</string>
    <string name="name">Name</string>
    <string name="price_rm">Price (RM)</string>
    <string name="item_quantity">Quantity</string>
    <string name="order_summury">Order Summury</string>
    <string name="quantity_orderSummary">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="quantity">Quantity</string>
    <string name="order_details">Order Details</string>
    <string name="subtotal">SubTotal</string>
    <string name="submit">Submit</string>
    <string name="item_name">Item Name</string>
    <string name="add_item">Add Item</string>
    <string name="payment">Payment</string>
    <string name="total">Total:</string>
    <string name="amount_paid">Amount Paid:</string>
    <string name="member_id">Member ID:</string>
    <string name="change">Change:</string>
    <string name="confirm">Confirm</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="table_number">Table Number</string>
    <string name="number_of_seats">Number Of Seats</string>
    <string name="table_status">Table Status</string>
    <string name="eg_a001">eg. A001</string>
    <string name="discount_10">Discount 10%</string>
    <string name="paid">Paid</string>
    <string name="not_paid">Not Paid</string>
    <string name="member_notexist">Member do not exist</string>
    <string name="member_exist">Member exist</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="orders">Orders</string>
    <string name="order_id_2">Order ID</string>
    <string name="table_no_2">Table No.</string>
    <string name="status_2">Status</string>


    <string-array name="table_status">
        <item>Available</item>
        <item>Unavailable</item>
    </string-array>

</resources>
