<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"

    >
    <TextView
        android:id="@+id/payment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        android:textSize="20sp"
        android:fontFamily="@font/raleway"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/orders_popup_itemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textSize="18sp"
        android:layout_marginStart="55dp"
        app:layout_constraintTop_toBottomOf="@id/payment_title"
        app:layout_constraintStart_toStartOf="@id/orders_popup_recyclerview"
        app:layout_constraintBottom_toTopOf="@id/orders_popup_recyclerview"
        />

    <TextView
        android:id="@+id/orders_popup_quantityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="18sp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/payment_title"
        app:layout_constraintEnd_toStartOf="@id/orders_popup_priceTitle"
        app:layout_constraintBottom_toTopOf="@id/orders_popup_recyclerview"
        />
    <TextView
        android:id="@+id/orders_popup_priceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_rm"
        android:textSize="18sp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@id/payment_title"
        app:layout_constraintEnd_toEndOf="@id/orders_popup_recyclerview"
        app:layout_constraintBottom_toTopOf="@id/orders_popup_recyclerview"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orders_popup_recyclerview"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_title"
        app:layout_constraintBottom_toTopOf="@id/payment_button"
        />
    <Spinner
        android:id="@+id/orders_popup_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/orders_popup_recyclerview"
        app:layout_constraintStart_toStartOf="@id/orders_popup_recyclerview"
        app:layout_constraintBottom_toTopOf="@id/orders_total_title"
        />
    <EditText
        android:id="@+id/orders_popup_quantitySel"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toStartOf="@+id/orders_popup_addItembtn"
        app:layout_constraintTop_toBottomOf="@id/orders_popup_recyclerview"
        app:layout_constraintBottom_toTopOf="@id/orders_total_title"
        />
    <Button
        android:id="@+id/orders_popup_addItembtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/raleway"
        app:layout_constraintTop_toBottomOf="@id/orders_popup_recyclerview"
        app:layout_constraintBottom_toTopOf="@id/orders_total_title"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/orders_total_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/total"
        android:fontFamily="@font/raleway"
        android:layout_marginTop="50dp"
        android:layout_marginStart="35dp"
        app:layout_constraintStart_toStartOf="@id/payment_button"
        app:layout_constraintTop_toBottomOf="@id/orders_popup_recyclerview"
        app:layout_constraintBottom_toTopOf="@id/payment_button"
        />

    <TextView
        android:id="@+id/orders_total_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/raleway"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/orders_total_title"
        app:layout_constraintTop_toBottomOf="@id/orders_popup_recyclerview"
        app:layout_constraintBottom_toTopOf="@id/payment_button"
        />
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/orders_popup_recyclerview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/payment_button"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/raleway"
        android:text="@string/cancel_order"
        android:padding="15dp"
        android:layout_marginTop="90dp"
        />
    <Button
        android:id="@+id/payment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/orders_popup_recyclerview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/raleway"
        android:text="@string/make_payment"
        android:padding="15dp"
        android:layout_marginTop="90dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>