<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/darker_gray">

    <TextView
        android:id="@+id/payment_window_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/payment"
        android:fontFamily="@font/raleway"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        />

    <TextView
        android:id="@+id/payment_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="20sp"
        android:fontFamily="@font/raleway"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/payment_window_text"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        />

    <TextView
        android:id="@+id/payment_total_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/raleway"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/payment_window_text"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        />

    <TextView
        android:id="@+id/amount_paid_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/raleway"
        android:text="@string/amount_paid"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/payment_total" />

    <TextView
        android:id="@+id/member_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_id"
        android:fontFamily="@font/raleway"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/amount_paid_title"
        app:layout_constraintStart_toEndOf="@id/guideline3"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/amount_paid_input"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="numberDecimal"
        android:fontFamily="@font/raleway"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/payment_total_data"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintBottom_toBottomOf="@id/amount_paid_title"
        />

    <EditText
        android:id="@+id/member_id_input"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/raleway"
        android:inputType="textPersonName"
        android:layout_marginEnd="100dp"
        app:layout_constraintTop_toBottomOf="@id/amount_paid_input"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintBottom_toBottomOf="@id/member_id"
        />

    <TextView
        android:id="@+id/calculate_change_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:fontFamily="@font/raleway"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/member_id"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        />

    <TextView
        android:id="@+id/calculate_change_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/member_id_input"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/confirmPaymentbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/calculate_change_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/confirm"
        android:fontFamily="@font/raleway"
        android:layout_marginTop="15dp"
        android:padding="20dp"
        android:layout_marginBottom="15dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="70dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="200dp" />
</androidx.constraintlayout.widget.ConstraintLayout>