<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/orderTitle"
        android:layout_width="904dp"
        android:layout_height="wrap_content"
        android:text="@string/orders"
        android:textSize="35sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:fontFamily="@font/raleway"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/ordertitlelinetop"
        android:layout_width="904dp"
        android:layout_height="1dp"
        android:background="#d3d3d3"
        app:layout_constraintTop_toBottomOf="@id/orderTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/orderInfotitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ordertitlelinetop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <View
            android:id="@+id/ordertitleline1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#d3d3d3" />
        <TextView
            android:id="@+id/orderIdTitle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/order_id_2"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/raleway"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <View
            android:id="@+id/ordertitleline"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#d3d3d3" />

        <TextView
            android:id="@+id/orderTableNoTitle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/table_no_2"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/raleway"
            android:textAlignment="center"
            android:textColor="@android:color/black"/>

        <View
            android:id="@+id/ordertitleline3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#d3d3d3" />

        <TextView
            android:id="@+id/orderStatusTitle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/status_2"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/raleway"
            android:textAlignment="center"
            android:textColor="@android:color/black"/>

        <View
            android:id="@+id/ordertitleline4"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#d3d3d3" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orders_recyclerview"
        android:layout_width="904dp"
        android:layout_height="500dp"
        app:layout_constraintTop_toBottomOf="@+id/orderInfotitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/textview_border"/>

</androidx.constraintlayout.widget.ConstraintLayout>
