<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView_nav_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/food"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_nav_Beverages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="16dp"
        android:text="@string/beverages"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView_nav_food"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_Food"
        android:layout_width="400dp"
        android:layout_height="665dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nav_food" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_Beverages"
        android:layout_width="400dp"
        android:layout_height="665dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toEndOf="@+id/recyclerView_Food"
        app:layout_constraintTop_toBottomOf="@+id/textView_nav_Beverages" />

    <TextView
        android:id="@+id/textView_titleName_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="10dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_Food"
        app:layout_constraintStart_toStartOf="@+id/guideline_food" />

    <TextView
        android:id="@+id/textView_titlePrice_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="10dp"
        android:text="@string/price_rm"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_Food"
        app:layout_constraintStart_toEndOf="@+id/textView_titleName_food" />

    <TextView
        android:id="@+id/textView_titleQuantity_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="10dp"
        android:text="@string/quantity"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_Food"
        app:layout_constraintStart_toEndOf="@+id/textView_titlePrice_food" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <TextView
        android:id="@+id/textView_titleName_beverages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="10dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_Beverages"
        app:layout_constraintStart_toStartOf="@+id/guideline_beverages" />

    <TextView
        android:id="@+id/textView_titlePrice_beverages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="10dp"
        android:text="Price (RM)"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_Beverages"
        app:layout_constraintStart_toEndOf="@+id/textView_titleName_beverages" />

    <TextView
        android:id="@+id/textView_titleQuantity_beverages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="10dp"
        android:text="Quantity"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_Beverages"
        app:layout_constraintStart_toEndOf="@+id/textView_titlePrice_beverages" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_beverages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="400dp" />


</androidx.constraintlayout.widget.ConstraintLayout>